# mask-predict

./: .gitignore  .python-version  0-data-prep.ipynb  1-compute-gradients.ipynb  2-process-gradient-data.ipynb  3-thematic-analysis-ig.ipynb  4-contrastive-analysis.ipynb  LICENSE  README.md  Target_analysis_local.ipynb  chr-paper.ipynb  compute_influence_improved.ipynb  example_analysis.ipynb  example_analysis_colab.ipynb  example_analysis_historical_ig_innovations.ipynb  genre_detection.ipynb  pyproject.toml  sentence_array_photographic.csv  setup.cfg  setup.py  sft_experiment.ipynb
explain/: __init__.py  analyse.py  explain.py  gpt_annotation.py  regression_analysis.py  tools.py  topicbert_viz.py  visualise.py
