[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mask-predict"
version = "0.1.0"
description = "A package for explaining predictions made by masked language models."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
homepage = "https://github.com/YourUsername/mask-predict"
repository = "https://github.com/YourUsername/mask-predict"
keywords = ["explain", "masked language model", "NLP", "machine learning"]

[tool.setuptools]
packages = ["explain"]

[project.dependencies]
torch = "^1.9.0"
transformers = "^4.0.0"
captum = "^0.4.0"
pandas = "^1.2.0"
numpy = "^1.19.0"
matplotlib = "^3.3.0"
seaborn = "^0.11.0"