[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mask-predict"
version = "0.1.0"
description = "A package for explaining predictions made by masked language models."
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
dependencies = [
    "torch",
    "transformers",
    "captum",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
]

[project.urls]
Homepage = "https://github.com/YourUsername/mask-predict"

[tool.setuptools.packages.find]
include = ["explain", "explain.*"]