[metadata]
name = explain
version = 0.1.0
description = A module for explaining predictions made by masked language models.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/explain
license = MIT

[options]
packages = find:
install_requires =
    torch
    transformers
    captum
    pandas
    numpy
    matplotlib
    seaborn

[options.packages.find]
where = .